--- a/clusters/test2/infr-apps/victoria-metrics-operator.yaml
+++ b/clusters/test2/infr-apps/victoria-metrics-operator.yaml
@@ -55,4 +55,11 @@ spec:
         values: |
           operator:
             create: true
+            image:
+              repository: victoriametrics/operator
+              tag: v0.41.1
+          
+          # Отключить metrics-server в Kind (конфликтует)
+          metrics-server:
+            enabled: false
 
