--- a/clusters/test3/infr-apps/victoria-metrics-operator.yaml
+++ b/clusters/test3/infr-apps/victoria-metrics-operator.yaml
@@ -56,7 +56,7 @@ spec:
           operator:
             create: true
             image:
-              repository: victoriametrics/operator
+              repository: docker.io/victoriametrics/operator
               tag: v0.41.1
           
           # Отключить metrics-server в Kind (конфликтует)
