--- a/clusters/test2/infr-apps/fluent-bit.yaml
+++ b/clusters/test2/infr-apps/fluent-bit.yaml
@@ -23,6 +23,9 @@ spec:
       path: shared/jit-rbac-roles
       directory:
         include: fluent-bit-role.yaml
+      kustomize:
+        commonLabels:
+          jit-rbac/app: k8s-spb2-backend2-fluent-bit
     # JIT RBAC hooks (PreSync + PostSync)
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
@@ -36,10 +39,10 @@ spec:
             patch: |-
               - op: replace
                 path: /metadata/name
-                value: argocd-manager-fluent-bit
+                value: fluent-bit-crb
               - op: replace
                 path: /roleRef/name
-                value: argocd-manager-fluent-bit
+                value: fluent-bit-role
           - target:
               kind: Job
             patch: |-
