--- a/clusters/test3/custom-resource/clusterrole.yaml
+++ b/clusters/test3/custom-resource/clusterrole.yaml
@@ -67,7 +67,10 @@ rules:
     verbs: ["create", "delete", "update", "patch"]
   - apiGroups: ["rbac.authorization.k8s.io"]
     resources: ["clusterroles"]
-    verbs: ["bind", "get", "update", "patch", "create", "escalate"]
+    verbs: ["bind", "get", "update", "patch", "create", "escalate", "delete"]
+  - apiGroups: [""]
+    resources: ["pods"]
+    verbs: ["get", "list", "watch", "delete"]
   - apiGroups: ["batch"]
     resources: ["jobs"]
-    verbs: ["delete", "list", "get", "watch", "update"]
+    verbs: ["create", "delete", "list", "get", "watch", "update"]
