--- a/clusters/test1/custom-resource/clusterrole.yaml
+++ b/clusters/test1/custom-resource/clusterrole.yaml
@@ -67,10 +67,7 @@ rules:
     verbs: ["create", "delete", "update", "patch"]
   - apiGroups: ["rbac.authorization.k8s.io"]
     resources: ["clusterroles"]
-    verbs: ["bind", "get", "update", "patch", "create", "escalate", "delete"]
-  - apiGroups: [""]
-    resources: ["pods"]
-    verbs: ["get", "list", "watch", "delete"]
+    verbs: ["bind", "get", "update", "patch", "create", "escalate"]
   - apiGroups: ["batch"]
     resources: ["jobs"]
-    verbs: ["create", "delete", "list", "get", "watch", "update"]
+    verbs: ["delete", "list", "get", "watch", "update"]
