--- a/shared/jit-rbac-roles/certmanager-role.yaml
+++ b/shared/jit-rbac-roles/certmanager-role.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: certmanager-role
+  name: argocd-manager-certmanager
   annotations:
     argocd.argoproj.io/sync-wave: "-2"
   labels:
