--- a/clusters/test1/infr-apps/victoria-metrics-operator.yaml
+++ b/clusters/test1/infr-apps/victoria-metrics-operator.yaml
@@ -23,6 +23,9 @@ spec:
       path: shared/jit-rbac-roles
       directory:
         include: victoria-metrics-operator-role.yaml
+      kustomize:
+        commonLabels:
+          jit-rbac/app: k8s-spb1-backend1-victoria-metrics-operator
     # JIT RBAC hooks (PreSync + PostSync)
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
