--- a/clusters/test2/infr-apps/certmanager.yaml
+++ b/clusters/test2/infr-apps/certmanager.yaml
@@ -22,6 +22,9 @@ spec:
       path: shared/jit-rbac-roles
       directory:
         include: certmanager-role.yaml
+      kustomize:
+        commonLabels:
+          jit-rbac/app: k8s-spb2-backend2-certmanager
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
       path: shared/jit-rbac
