--- a/clusters/test3/infr-apps/certmanager.yaml
+++ b/clusters/test3/infr-apps/certmanager.yaml
@@ -22,6 +22,9 @@ spec:
       path: shared/jit-rbac-roles
       directory:
         include: certmanager-role.yaml
+      kustomize:
+        commonLabels:
+          jit-rbac/app: k8s-spb3-backend3-certmanager
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
       path: shared/jit-rbac
