--- a/clusters/test3/infr-apps/fluent-bit.yaml
+++ b/clusters/test3/infr-apps/fluent-bit.yaml
@@ -23,6 +23,9 @@ spec:
       path: shared/jit-rbac-roles
       directory:
         include: fluent-bit-role.yaml
+      kustomize:
+        commonLabels:
+          jit-rbac/app: k8s-spb3-backend3-fluent-bit
     # JIT RBAC hooks (PreSync + PostSync)
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
