--- a/clusters/test1/infr-apps/certmanager.yaml
+++ b/clusters/test1/infr-apps/certmanager.yaml
@@ -21,10 +21,7 @@ spec:
       targetRevision: HEAD
       path: shared/jit-rbac-roles
       directory:
-        include: certmanager-role.yaml
-      kustomize:
-        commonLabels:
-          jit-rbac/app: k8s-spb2-backend1-certmanager
+        include: argocd-manager-certmanager.yaml
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
       path: shared/jit-rbac
