--- a/clusters/test4/infr-apps/fluent-bit.yaml
+++ b/clusters/test4/infr-apps/fluent-bit.yaml
@@ -23,9 +23,6 @@ spec:
       path: shared/jit-rbac-roles
       directory:
         include: fluent-bit-role.yaml
-      kustomize:
-        commonLabels:
-          jit-rbac/app: k8s-spb4-backend4-fluent-bit
     # JIT RBAC hooks (PreSync + PostSync)
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
@@ -39,10 +36,10 @@ spec:
             patch: |-
               - op: replace
                 path: /metadata/name
-                value: fluent-bit-crb
+                value: argocd-manager-fluent-bit
               - op: replace
                 path: /roleRef/name
-                value: fluent-bit-role
+                value: argocd-manager-fluent-bit
           - target:
               kind: Job
             patch: |-
