--- a/shared/jit-rbac/post-hook.yaml
+++ b/shared/jit-rbac/post-hook.yaml
@@ -32,10 +32,16 @@ spec:
         command: ["/bin/sh","-lc"]
         args:
           - |
+            echo "Getting ClusterRole name from CRB";
+            ROLE_NAME=$(kubectl get clusterrolebinding -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} -o jsonpath='{.items[0].roleRef.name}' 2>/dev/null || echo "");
             echo "Deleting temporary CRB by label selector";
             kubectl delete clusterrolebinding -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} --ignore-not-found=true;
+            if [ -n "$ROLE_NAME" ]; then
+              echo "Deleting temporary ClusterRole: $ROLE_NAME";
+              kubectl delete clusterrole "$ROLE_NAME" --ignore-not-found=true;
+            else
+              echo "No ClusterRole found to delete";
+            fi
             echo "Deleting completed PostSync pods with label app.kubernetes.io/part-of=argo-jit-rbac";
             kubectl delete pod -n kube-system -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} --field-selector=status.phase=Succeeded --ignore-not-found=true || true;
-            echo "Deleting temporary ClusterRole by label selector";
-            kubectl delete clusterrole -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} --ignore-not-found=true;
             echo "Done";
