--- a/clusters/test3/custom-resource/clusterrole.yaml
+++ b/clusters/test3/custom-resource/clusterrole.yaml
@@ -59,7 +59,7 @@ rules:
     verbs: ["create", "delete", "update", "patch", "get", "list", "watch"]
   - apiGroups: ["rbac.authorization.k8s.io"]
     resources: ["clusterroles"]
-    verbs: ["bind", "get", "update", "patch", "create", "escalate", "delete", "list", "watch"]
+    verbs: ["bind", "get", "update", "patch", "create", "escalate", "list", "watch"]
   - apiGroups: [""]
     resources: ["pods"]
     verbs: ["delete", "get", "list", "watch"]
