--- a/shared/jit-rbac/kustomization.yaml
+++ b/shared/jit-rbac/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - pre-sync-patch.yaml
-  - post-sync-clear.yaml
+  - pre-sync.yaml
+  - post-sync.yaml
