--- a/shared/jit-rbac/pre-sync.yaml
+++ b/shared/jit-rbac/pre-sync.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: argocd-jit-rbac-patch-role
+  name: argocd-jit-rbac-enrich-role
   namespace: kube-system
   annotations:
     argocd.argoproj.io/hook: PreSync
@@ -21,7 +21,7 @@ spec:
       serviceAccountName: argocd-manager
       restartPolicy: Never
       containers:
-      - name: patch-role
+      - name: enrich-role
         image: bitnami/kubectl:latest
         imagePullPolicy: IfNotPresent
         env:
@@ -37,10 +37,29 @@ spec:
         args:
           - |
             set -e
-            echo "=== JIT RBAC PreSync: Patching Role ===";
+            echo "=== JIT RBAC PreSync: Creating/Enriching Role ===";
             echo "Application: ${JIT_RBAC_APP}";
             echo "Role: ${ROLE_NAME}";
             echo "ConfigMap: ${RULES_CONFIGMAP}";
+            
+            # Проверяем, существует ли роль
+            if ! kubectl get clusterrole "${ROLE_NAME}" >/dev/null 2>&1; then
+              echo "Role ${ROLE_NAME} does not exist. Creating empty role...";
+              kubectl apply -f - <<EOF
+            apiVersion: rbac.authorization.k8s.io/v1
+            kind: ClusterRole
+            metadata:
+              name: ${ROLE_NAME}
+              labels:
+                app.kubernetes.io/part-of: jit-rbac
+                jit-rbac/type: dynamic-role
+                jit-rbac/service: ${ROLE_NAME%-role}
+            rules: []
+            EOF
+              echo "Empty role ${ROLE_NAME} created";
+            else
+              echo "Role ${ROLE_NAME} already exists";
+            fi
             
             # Читаем rules из ConfigMap
             echo "Fetching rules from ConfigMap ${RULES_CONFIGMAP}";
@@ -51,17 +70,17 @@ spec:
               exit 1;
             fi
             
-            # Создаём patch JSON
+            # Обогащаем роль правами
+            echo "Enriching ClusterRole ${ROLE_NAME} with rules from ConfigMap";
             PATCH_JSON=$(cat <<EOFPATCH
             {
               "rules": ${RULES_JSON}
             }
             EOFPATCH
             )
-            
-            echo "Patching ClusterRole ${ROLE_NAME} with rules from ConfigMap";
             echo "${PATCH_JSON}" | kubectl patch clusterrole "${ROLE_NAME}" --type=merge -p "$(cat -)";
             
+            # Создаём ClusterRoleBinding
             echo "Creating ClusterRoleBinding";
             kubectl apply -f - <<EOF
             apiVersion: rbac.authorization.k8s.io/v1
