--- a/shared/jit-rbac-roles/fluent-bit-role.yaml
+++ b/shared/jit-rbac-roles/fluent-bit-role.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: fluent-bit-role
+  name: argocd-manager-fluent-bit
   annotations:
     argocd.argoproj.io/sync-wave: "-3"
   labels:
