--- a/shared/jit-rbac/pre-hook.yaml
+++ b/shared/jit-rbac/pre-hook.yaml
@@ -1,92 +1,18 @@
-apiVersion: batch/v1
-kind: Job
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
 metadata:
-  name: argocd-jit-rbac-enrich-role
-  namespace: kube-system
+  name: ROLE_NAME_PLACEHOLDER
   annotations:
     argocd.argoproj.io/hook: PreSync
     argocd.argoproj.io/hook-delete-policy: HookFailed
     argocd.argoproj.io/sync-wave: "-1"
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
-spec:
-  backoffLimit: 0
-  ttlSecondsAfterFinished: 60
-  template:
-    metadata:
-      labels:
-        app.kubernetes.io/part-of: argo-jit-rbac
-        jit-rbac/app: PLACEHOLDER
-    spec:
-      serviceAccountName: argocd-manager
-      restartPolicy: Never
-      containers:
-      - name: enrich-role
-        image: bitnami/kubectl:latest
-        imagePullPolicy: IfNotPresent
-        env:
-        - name: JIT_RBAC_APP
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.labels['jit-rbac/app']
-        - name: ROLE_NAME
-          value: "ROLE_NAME_PLACEHOLDER"
-        - name: RULES_CONFIGMAP
-          value: "RULES_CONFIGMAP_PLACEHOLDER"
-        command: ["/bin/sh", "-c"]
-        args:
-          - |
-            set -e
-            echo "=== JIT RBAC PreSync: Creating/Enriching Role ===";
-            echo "Application: ${JIT_RBAC_APP}";
-            echo "Role: ${ROLE_NAME}";
-            echo "ConfigMap: ${RULES_CONFIGMAP}";
-            
-            # Проверяем, существует ли роль (она должна быть создана первым источником)
-            if ! kubectl get clusterrole "${ROLE_NAME}" >/dev/null 2>&1; then
-              echo "ERROR: Role ${ROLE_NAME} does not exist. It should be created by the first source.";
-              exit 1;
-            else
-              echo "Role ${ROLE_NAME} exists, proceeding with enrichment";
-            fi
-            
-            # Читаем rules из ConfigMap
-            echo "Fetching rules from ConfigMap ${RULES_CONFIGMAP}";
-            RULES_JSON=$(kubectl get configmap "${RULES_CONFIGMAP}" -n kube-system -o jsonpath='{.data.rules\.json}');
-            
-            if [ -z "$RULES_JSON" ]; then
-              echo "ERROR: Rules not found in ConfigMap";
-              exit 1;
-            fi
-            
-            # Обогащаем роль правами
-            echo "Enriching ClusterRole ${ROLE_NAME} with rules from ConfigMap";
-            PATCH_JSON=$(cat <<EOFPATCH
-            {
-              "rules": ${RULES_JSON}
-            }
-            EOFPATCH
-            )
-            echo "${PATCH_JSON}" | kubectl patch clusterrole "${ROLE_NAME}" --type=merge -p "$(cat -)";
-            
-            # Создаём ClusterRoleBinding
-            echo "Creating ClusterRoleBinding";
-            kubectl apply -f - <<EOF
-            apiVersion: rbac.authorization.k8s.io/v1
-            kind: ClusterRoleBinding
-            metadata:
-              name: ${ROLE_NAME}-binding
-              labels:
-                app.kubernetes.io/part-of: argo-jit-rbac
-                jit-rbac/app: ${JIT_RBAC_APP}
-            roleRef:
-              apiGroup: rbac.authorization.k8s.io
-              kind: ClusterRole
-              name: ${ROLE_NAME}
-            subjects:
-            - kind: ServiceAccount
-              name: argocd-manager
-              namespace: kube-system
-            EOF
-            
-            echo "PreSync completed successfully";
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: ROLE_NAME_PLACEHOLDER
+subjects:
+  - kind: ServiceAccount
+    name: argocd-manager
+    namespace: kube-system
