--- a/clusters/test1/infr-apps/fluent-bit.yaml
+++ b/clusters/test1/infr-apps/fluent-bit.yaml
@@ -17,13 +17,7 @@ spec:
     name: kind-test-1
     namespace: fluent-bit
   sources:
-    # JIT RBAC role definition
-    - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
-      targetRevision: HEAD
-      path: shared/jit-rbac-roles
-      directory:
-        include: fluent-bit-role.yaml
-    # JIT RBAC hooks (PreSync + PostSync)
+    # JIT RBAC hooks (PreSync + PostSync) - создаёт пустую роль
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
       path: shared/jit-rbac
@@ -31,6 +25,12 @@ spec:
         commonLabels:
           jit-rbac/app: k8s-spb2-backend1-fluent-bit
         patches:
+          - target:
+              kind: ClusterRole
+            patch: |-
+              - op: replace
+                path: /metadata/name
+                value: argocd-manager-fluent-bit
           - target:
               kind: ClusterRoleBinding
             patch: |-
@@ -46,6 +46,12 @@ spec:
               - op: replace
                 path: /metadata/name
                 value: argocd-jit-rbac-cleanup-fluent-bit
+    # JIT RBAC role definition - заполняет пустую роль правилами
+    - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
+      targetRevision: HEAD
+      path: shared/jit-rbac-roles
+      directory:
+        include: fluent-bit-role.yaml
     # Fluent-bit Helm chart
     - repoURL: 'https://github.com/nomad-mrkn/charts.git'
       targetRevision: HEAD
