--- a/shared/jit-rbac/post-hook.yaml
+++ b/shared/jit-rbac/post-hook.yaml
@@ -32,7 +32,7 @@ spec:
         command: ["/bin/sh","-lc"]
         args:
           - |
-            echo "=== JIT RBAC Cleanup (Keep Role) ===";
+            echo "=== JIT RBAC Cleanup (Keep Role, Clear Rules) ===";
             echo "App: ${JIT_RBAC_APP}";
             
             echo "Getting ClusterRole name from CRB";
@@ -42,11 +42,13 @@ spec:
             kubectl delete clusterrolebinding -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} --ignore-not-found=true;
             
             if [ -n "$ROLE_NAME" ]; then
-              echo "ClusterRole '$ROLE_NAME' will be kept in cluster for future use";
+              echo "Clearing rules of ClusterRole: $ROLE_NAME";
+              kubectl patch clusterrole "$ROLE_NAME" --type=merge -p '{"rules": []}' || echo "Patch failed";
+              echo "ClusterRole '$ROLE_NAME' kept with empty rules";
             else
               echo "No ClusterRole found";
             fi
             
             echo "Deleting completed PostSync pods with label app.kubernetes.io/part-of=argo-jit-rbac";
             kubectl delete pod -n kube-system -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} --field-selector=status.phase=Succeeded --ignore-not-found=true || true;
-            echo "Cleanup completed - ClusterRole preserved";
+            echo "Cleanup completed - ClusterRole preserved with empty rules";
