--- a/clusters/test1/custom-resource/clusterrole.yaml
+++ b/clusters/test1/custom-resource/clusterrole.yaml
@@ -65,4 +65,4 @@ rules:
     verbs: ["delete", "get", "list", "watch"]
   - apiGroups: ["batch"]
     resources: ["jobs", "cronjobs"]
-    verbs: ["create", "delete", "list", "get", "watch", "update"]
+    verbs: ["create", "delete", "list", "get", "watch", "update", "patch"]
