--- a/clusters/test1/custom-resource/cleanup-cronjob.yaml
+++ b/clusters/test1/custom-resource/cleanup-cronjob.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: kube-system
   annotations:
     argocd.argoproj.io/sync-wave: "0"
+  labels:
+    app.kubernetes.io/part-of: argo-jit-rbac-cron
 spec:
   schedule: "*/15 * * * *"
   successfulJobsHistoryLimit: 1
@@ -62,3 +64,4 @@ spec:
                 kubectl delete pod -n kube-system -l app.kubernetes.io/part-of=argo-jit-rbac-cron --field-selector=status.phase=Succeeded --ignore-not-found=true || true;
                 
                 echo "Cleanup completed at $(date)";
+
