--- a/clusters/test1/infr-apps/fluent-bit.yaml
+++ b/clusters/test1/infr-apps/fluent-bit.yaml
@@ -28,12 +28,14 @@ spec:
         patches:
           - target:
               kind: Job
+              name: argocd-jit-rbac-presync-prepare
             patch: |-
               - op: replace
                 path: /metadata/name
                 value: argocd-jit-rbac-presync-prepare-fluent-bit
           - target:
               kind: Job
+              name: argocd-jit-rbac-cleanup
             patch: |-
               - op: replace
                 path: /metadata/name
