--- a/shared/jit-rbac-roles/certmanager-role.yaml
+++ b/shared/jit-rbac-roles/certmanager-role.yaml
@@ -3,9 +3,11 @@ kind: ClusterRole
 metadata:
   name: argocd-manager-certmanager
   annotations:
-    argocd.argoproj.io/sync-wave: "-2"
+    argocd.argoproj.io/sync-wave: "0"
+    argocd.argoproj.io/sync-options: Prune=false
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
+    jit-rbac/app: k8s-spb2-backend1-certmanager
 rules:
   # Cert-manager CRDs management
   - apiGroups: ["apiextensions.k8s.io"]
