--- a/clusters/test1/infr-apps/certmanager.yaml
+++ b/clusters/test1/infr-apps/certmanager.yaml
@@ -17,7 +17,7 @@ spec:
     name: kind-test-1
     namespace: cert-manager
   sources:
-    # JIT RBAC hooks (PreSync + PostSync) - создаёт пустую роль для сервиса
+    # JIT RBAC hooks (PreSync + PostSync) - создаёт временный биндинг
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
       path: shared/jit-rbac
@@ -25,12 +25,6 @@ spec:
         commonLabels:
           jit-rbac/app: k8s-spb2-backend1-certmanager
         patches:
-          - target:
-              kind: ClusterRole
-            patch: |-
-              - op: replace
-                path: /metadata/name
-                value: argocd-manager-certmanager
           - target:
               kind: ClusterRoleBinding
             patch: |-
