--- a/shared/jit-rbac/post-hook.yaml
+++ b/shared/jit-rbac/post-hook.yaml
@@ -32,23 +32,21 @@ spec:
         command: ["/bin/sh","-lc"]
         args:
           - |
-            echo "=== JIT RBAC Cleanup (Keep Role, Clear Rules) ===";
+            echo "=== JIT RBAC Cleanup (Keep Role with Rules) ===";
             echo "App: ${JIT_RBAC_APP}";
             
             echo "Getting ClusterRole name from CRB";
             ROLE_NAME=$(kubectl get clusterrolebinding -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} -o jsonpath='{.items[0].roleRef.name}' 2>/dev/null || echo "");
             
-            echo "Deleting temporary CRB by label selector (keeping ClusterRole)";
+            echo "Deleting temporary CRB by label selector (keeping ClusterRole with rules)";
             kubectl delete clusterrolebinding -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} --ignore-not-found=true;
             
             if [ -n "$ROLE_NAME" ]; then
-              echo "Clearing rules of ClusterRole: $ROLE_NAME";
-              kubectl patch clusterrole "$ROLE_NAME" --type=merge -p '{"rules": []}' || echo "Patch failed";
-              echo "ClusterRole '$ROLE_NAME' kept with empty rules";
+              echo "ClusterRole '$ROLE_NAME' kept with rules for other applications";
             else
               echo "No ClusterRole found";
             fi
             
             echo "Deleting completed PostSync pods with label app.kubernetes.io/part-of=argo-jit-rbac";
             kubectl delete pod -n kube-system -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} --field-selector=status.phase=Succeeded --ignore-not-found=true || true;
-            echo "Cleanup completed - ClusterRole preserved with empty rules";
+            echo "Cleanup completed - ClusterRole preserved with rules";
